<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@color/color_background_card"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/bottom_sheet_padding"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/bottom_sheet_peek_height"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/alt_bottom_sheet_chevron"
                android:src="@drawable/icn_chevron_up"
                android:tint="@color/color_text_secondary" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/inference_time_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_inference_time"
                android:textColor="@color/color_text_primary"
                android:textSize="@dimen/bottom_sheet_text_size" />

            <TextView
                android:id="@+id/inference_time_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="0ms"
                android:textColor="@color/color_accent"
                android:textSize="@dimen/bottom_sheet_text_size"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_hand_detection_confidence_threshold"
                android:textColor="@color/color_text_primary"
                android:textSize="@dimen/bottom_sheet_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.widget.Button
                    android:id="@+id/detection_threshold_minus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_minus"
                    android:background="@color/color_background_surface"
                    android:textColor="@color/color_text_primary"
                    android:text="-" />

                <TextView
                    android:id="@+id/detection_threshold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/bottom_sheet_control_text_side_margin"
                    android:layout_marginRight="@dimen/bottom_sheet_control_text_side_margin"
                    android:gravity="center"
                    android:minEms="@integer/bottom_sheet_control_text_min_ems"
                    android:textColor="@color/color_text_primary"
                    android:textSize="@dimen/bottom_sheet_text_size" />

                <android.widget.Button
                    android:id="@+id/detection_threshold_plus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_plus"
                    android:background="@color/color_background_surface"
                    android:textColor="@color/color_text_primary"
                    android:text="+" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_hand_tracking_confidence_threshold"
                android:textColor="@color/color_text_primary"
                android:textSize="@dimen/bottom_sheet_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.widget.Button
                    android:id="@+id/tracking_threshold_minus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_minus"
                    android:background="@color/color_background_surface"
                    android:textColor="@color/color_text_primary"
                    android:text="-" />

                <TextView
                    android:id="@+id/tracking_threshold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/bottom_sheet_control_text_side_margin"
                    android:layout_marginRight="@dimen/bottom_sheet_control_text_side_margin"
                    android:gravity="center"
                    android:minEms="@integer/bottom_sheet_control_text_min_ems"
                    android:textColor="@color/color_text_primary"
                    android:textSize="@dimen/bottom_sheet_text_size" />

                <android.widget.Button
                    android:id="@+id/tracking_threshold_plus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_plus"
                    android:background="@color/color_background_surface"
                    android:textColor="@color/color_text_primary"
                    android:text="+" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_hand_presence_confidence_threshold"
                android:textColor="@color/color_text_primary"
                android:textSize="@dimen/bottom_sheet_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <android.widget.Button
                    android:id="@+id/presence_threshold_minus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_minus"
                    android:background="@color/color_background_surface"
                    android:textColor="@color/color_text_primary"
                    android:text="-" />

                <TextView
                    android:id="@+id/presence_threshold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/bottom_sheet_control_text_side_margin"
                    android:layout_marginRight="@dimen/bottom_sheet_control_text_side_margin"
                    android:gravity="center"
                    android:minEms="@integer/bottom_sheet_control_text_min_ems"
                    android:textColor="@color/color_text_primary"
                    android:textSize="@dimen/bottom_sheet_text_size" />

                <android.widget.Button
                    android:id="@+id/presence_threshold_plus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_plus"
                    android:background="@color/color_background_surface"
                    android:textColor="@color/color_text_primary"
                    android:text="+" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_num_hands"
                android:textColor="@color/color_text_primary"
                android:textSize="@dimen/bottom_sheet_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.widget.Button
                    android:id="@+id/max_hands_minus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_max_results_button_minus"
                    android:background="@color/color_background_surface"
                    android:textColor="@color/color_text_primary"
                    android:text="-" />

                <TextView
                    android:id="@+id/max_hands_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/bottom_sheet_control_text_side_margin"
                    android:layout_marginRight="@dimen/bottom_sheet_control_text_side_margin"
                    android:gravity="center"
                    android:minEms="@integer/bottom_sheet_control_text_min_ems"
                    android:textColor="@color/color_text_primary"
                    android:textSize="@dimen/bottom_sheet_text_size" />

                <android.widget.Button
                    android:id="@+id/max_hands_plus"
                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
                    android:contentDescription="@string/alt_bottom_sheet_max_results_button_plus"
                    android:background="@color/color_background_surface"
                    android:textColor="@color/color_text_primary"
                    android:text="+" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_delegate"
                android:textColor="@color/color_text_primary"
                android:textSize="@dimen/bottom_sheet_text_size" />

            <android.widget.Spinner
                android:id="@+id/spinner_delegate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/delegate_spinner_titles"
                android:minWidth="@dimen/bottom_sheet_spinner_delegate_min_width" />

        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>